--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
     </dependencies>
 
+    <build>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -55,6 +56,7 @@
             </configuration>
         </plugin>
     </plugins>
+    </build>>
 
 
 </project>
