Move gecko driver path to config file

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,3 +7,5 @@ books_file=/home/apavlov/dev/fantlab/data/books.csv
 books_genre=/home/apavlov/dev/fantlab/data/genre_uniq.csv
 max_users=400
 max_marks=2500
+webdriver_gecko_driver=/home/apavlov/dev/geckodriver
+max_threads=4
