Implement user data fetching, add unit tests for regex expressions and whole fetcher

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 username=your_user_name
 password=your_password
-my_uri=https://fantlab.ru/userXXXXX
+my_uri=https://fantlab.ru/user142354
 marks_file=/home/apavlov/dev/fantlab/data/marks.csv
 users_file=/home/apavlov/dev/fantlab/data/users.csv
 books_file=/home/apavlov/dev/fantlab/data/books.csv
