Remove debug limits

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,12 @@
-username=your_user_name
-password=your_password
+username=inkpot
+password=pavlov122
 my_uri=https://fantlab.ru/user142354
 marks_file=/home/apavlov/dev/fantlab/data/marks.csv
 users_file=/home/apavlov/dev/fantlab/data/users.csv
 books_file=/home/apavlov/dev/fantlab/data/books.csv
 books_genre=/home/apavlov/dev/fantlab/data/genre_uniq.csv
-max_users=400
-max_marks=2500
+max_users=200
 webdriver_gecko_driver=/home/apavlov/dev/geckodriver
-max_threads=4
+max_threads=2
+max_marks=4000
+valid_user_max_marks=10000
