--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 username=inkpot
-password=pavlov122
+password=xxx
 my_uri=https://fantlab.ru/user142354
 marks_file=/home/apavlov/dev/fantlab/data/marks.csv
 users_file=/home/apavlov/dev/fantlab/data/users.csv
