Add phantom js driver, remove static usage

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,8 +5,9 @@ marks_file=/home/apavlov/dev/fantlab/data/marks.csv
 users_file=/home/apavlov/dev/fantlab/data/users.csv
 books_file=/home/apavlov/dev/fantlab/data/books.csv
 books_genre=/home/apavlov/dev/fantlab/data/genre_uniq.csv
-max_users=200
-webdriver_gecko_driver=/home/apavlov/dev/geckodriver
-max_threads=2
+max_users=20
+#webdriver_gecko_driver=/home/apavlov/dev/geckodriver
+webdriver_phantomjs_driver=/home/apavlov/dev/phantomjs-2.1.1-linux-x86_64/bin/phantomjs
+max_threads=4
 max_marks=4000
 valid_user_max_marks=10000
