--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,21 @@
     <artifactId>fantlab</artifactId>
     <version>0.1</version>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://jooq.sourceforge.net/license/LICENSE.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>a-pavlov</name>
+            <email>dkfsoft@gmail.com</email>
+        </developer>
+    </developers>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
@@ -52,6 +67,7 @@
     </dependencies>
 
     <build>
+        <finalName>flCollector</finalName>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -61,8 +77,19 @@
                 <target>1.8</target>
             </configuration>
         </plugin>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>org.fantlab.FLMain</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </plugin>
     </plugins>
-    </build>>
-
-
+    </build>
 </project>
